cluster-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  type: ClusterIP
  selector:
    app: bar-app
  ports:
  - port: 3001
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  type: ClusterIP
  selector:
    app: foo-app
  ports:
  - port: 3001
    name: http
