cluster-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-bar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /foo
        backend:
          service:
            name: foo-service
            port:
              number: 3001
      - pathType: Prefix
        path: /bar
        backend:
          service:
            name: bar-service
            port:
              number: 3001
